--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ permissions:
 
 defaults:
   run:
+    shell: bash
     working-directory: ./scripts
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
@@ -34,6 +35,7 @@ jobs:
           hugo-version: "0.149.1"
       - name: Build site
         run: hugo --minify
+        working-directory: cv
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
