--- a/cv/hugo.toml
+++ b/cv/hugo.toml
@@ -54,6 +54,11 @@ googleAnalytics = "G-VH7HZ3JWCD"
         details = "Bicep"
 
         [[params.skills.list]]
+        title = "Configuration Management"
+        [[params.skills.list.items]]
+        details = "Ansible"
+
+        [[params.skills.list]]
         title = "Scripting"
         [[params.skills.list.items]]
         details = "PowerShell"
@@ -156,7 +161,7 @@ googleAnalytics = "G-VH7HZ3JWCD"
 
         [[params.experience.list]]
         title = "Site Reliability Engineer"
-        dates = "Oct 2023 - Present"
+        dates = "Oct 2023 - Sep 2025"
         company = "RTGS Global"
         details = "Financial technology start-up company in London, United Kingdom, leading the Site Reliability Engineering team. Building, improving, and maintaining the Azure platform to ensure high-availability and security while supporting the engineering teams."
         [[params.experience.list.items]]
